--- a/Documentation/ldoc.css
+++ b/Documentation/ldoc.css
@@ -1,245 +1,313 @@
-
-/* styles for prettification of source */
-pre .comment { color: #558817; }
-pre .constant { color: #a8660d; }
-pre .escape { color: #844631; }
-pre .keyword { color: #aa5050; font-weight: bold; }
-pre .library { color: #0e7c6b; }
-pre .marker { color: #512b1e; background: #fedc56; font-weight: bold; }
-pre .string { color: #8080ff; }
-pre .number { color: #f8660d; }
-pre .operator { color: #2239a8; font-weight: bold; }
-pre .preprocessor, pre .prepro { color: #a33243; }
-pre .global { color: #800080; }
-pre .user-keyword { color: #800080; }
-pre .prompt { color: #558817; }
-pre .url { color: #272fc2; text-decoration: underline; }
+/* Monochromatic Dark Mode Styles with Visible Table Lines */
+pre .comment {
+    color: #bbbbbb;
+}
+/* Light gray */
+pre .constant {
+    color: #cccccc;
+}
+/* Slightly lighter gray */
+pre .escape {
+    color: #888888;
+}
+/* Medium gray */
+pre .keyword {
+    color: #ffffff;
+    font-weight: bold;
+}
+/* White */
+pre .library {
+    color: #aaaaaa;
+}
+/* Light-medium gray */
+pre .marker {
+    color: #dddddd;
+    background: #444444;
+    font-weight: bold;
+}
+/* Light gray on dark gray */
+pre .string {
+    color: #eeeeee;
+}
+/* Lighter gray */
+pre .number {
+    color: #bbbbbb;
+}
+/* Light gray */
+pre .operator {
+    color: #ffffff;
+    font-weight: bold;
+}
+/* White */
+pre .preprocessor, pre .prepro {
+    color: #aaaaaa;
+}
+/* Light-medium gray */
+pre .global {
+    color: #cccccc;
+}
+/* Light gray */
+pre .user-keyword {
+    color: #cccccc;
+}
+/* Light gray */
+pre .prompt {
+    color: #bbbbbb;
+}
+/* Light gray */
+pre .url {
+    color: #dddddd;
+    text-decoration: underline;
+}
+/* Light gray */
 
 body {
     margin-left: 1em;
     margin-right: 1em;
-    font-family: arial, helvetica, geneva, sans-serif;
-    background-color: #ffffff; margin: 0px;
+    font-family: Arial, Helvetica, Geneva, sans-serif;
+    background-color: #222222; /* Very dark gray */
+    color: #dddddd; /* Light gray */
+    margin: 0px;
 }
 
-code, tt { font-family: monospace; font-size: 1.1em; }
-span.parameter { font-family:monospace; }
-span.parameter:after { content:":"; }
-span.types:before { content:"("; }
-span.types:after { content:")"; }
-.type { font-weight: bold; font-style:italic }
+code, tt {
+    font-family: monospace;
+    font-size: 1.1em;
+    color: #eeeeee;
+}
+/* Lighter gray */
+span.parameter {
+    font-family: monospace;
+}
 
-body, td, th { font-size: .95em; line-height: 1.2em;}
-p { line-height: 1.2em;}
+    span.parameter:after {
+        content: ":";
+    }
 
-ul { margin: 10px 0 0 0px;}
+span.types:before {
+    content: "(";
+}
 
-p { margin: 3px 0px 0px 0px; }
+span.types:after {
+    content: ")";
+}
 
-strong { font-weight: bold;}
+.type {
+    font-weight: bold;
+    font-style: italic;
+}
 
-here { font-weight: bold; color: #c8751d;}
+body, td, th {
+    font-size: .95em;
+    line-height: 1.2em;
+    color: #dddddd;
+}
+/* Light gray */
+p {
+    line-height: 1.2em;
+}
 
-em { font-style: italic;}
+ul {
+    margin: 10px 0 0 0px;
+    color: #dddddd;
+}
+/* Light gray */
+
+p {
+    margin: 3px 0px 0px 0px;
+}
+
+strong {
+    font-weight: bold;
+}
+
+here {
+    font-weight: bold;
+    color: #eeeeee;
+}
+/* Lighter gray */
+
+em {
+    font-style: italic;
+}
 
 h1 {
     font-size: 1.5em;
     margin: 20px 0 20px 0;
+    color: #ffffff; /* White */
 }
-h2, h3, h4 { margin: 15px 0 10px 0; }
-h2 { font-size: 1.25em; }
-h3 { font-size: 1.15em; }
-h4 { font-size: 1.06em; }
 
-a:link { font-weight: bold; color: #004080; text-decoration: none; }
-a:visited { font-weight: bold; color: #006699; text-decoration: none; }
-a:link:hover { text-decoration: underline; }
+h2, h3, h4 {
+    margin: 15px 0 10px 0;
+    color: #dddddd;
+}
+/* Light gray */
+h2 {
+    font-size: 1.25em;
+}
+
+h3 {
+    font-size: 1.15em;
+}
+
+h4 {
+    font-size: 1.06em;
+}
+
+a:link {
+    font-weight: bold;
+    color: #ffffff;
+    text-decoration: none;
+}
+/* White */
+a:visited {
+    font-weight: bold;
+    color: #cccccc;
+    text-decoration: none;
+}
+/* Light gray */
+a:link:hover {
+    text-decoration: underline;
+}
 
 hr {
-    color:#cccccc;
-    background: #00007f;
+    color: #eeeeee; /* Off-white */
+    background: #eeeeee; /* Off-white */
     height: 1px;
 }
 
-blockquote { margin-left: 3em; }
-
-ul { list-style-type: disc; }
-
-ul li:not(:last-child) {
-    margin-bottom: 0.3em;
+blockquote {
+    margin-left: 3em;
+    color: #dddddd;
 }
+/* Light gray */
+
+ul {
+    list-style-type: disc;
+}
+
+    ul li:not(:last-child) {
+        margin-bottom: 0.3em;
+    }
 
 p.name {
     font-family: "Andale Mono", monospace;
     padding-top: 1em;
+    color: #eeeeee; /* Lighter gray */
 }
 
 pre {
-    background-color: rgb(245, 245, 245);
-    border: 1px solid #C0C0C0; /* silver */
+    background-color: #333333; /* Dark gray */
+    border: 1px solid #eeeeee; /* Off-white border */
     padding: 10px;
     margin: 10px 0 10px 0;
     overflow: auto;
     font-family: "Andale Mono", monospace;
+    color: #dddddd; /* Light gray */
 }
 
-pre.example {
-    font-size: .85em;
+    pre.example {
+        font-size: .85em;
+    }
+
+/* Table styling with visible border lines */
+table.index {
+    border: 1px solid #eeeeee; /* Off-white */
+    border-collapse: collapse; /* Ensures borders don't overlap */
 }
 
-table.index { border: 1px #00007f; }
-table.index td { text-align: left; vertical-align: top; }
+    table.index td {
+        border: 1px solid #eeeeee; /* Off-white */
+        text-align: left;
+        vertical-align: top;
+        color: #dddddd; /* Light gray */
+    }
+
+table.module_list, table.function_list {
+    border-width: 1px;
+    border-style: solid;
+    border-color: #eeeeee; /* Off-white */
+    border-collapse: collapse;
+    color: #dddddd; /* Light gray */
+}
+
+    table.module_list td, table.function_list td {
+        border-width: 1px;
+        border-style: solid;
+        border-color: #eeeeee; /* Off-white */
+        padding: 3px;
+    }
+
+        table.module_list td.name, table.function_list td.name {
+            background-color: #333333; /* Dark gray */
+            min-width: 250px;
+        }
+
+        table.module_list td.summary, table.function_list td.summary {
+            width: 100%;
+        }
 
 #container {
     margin-left: 1em;
     margin-right: 1em;
-    background-color: #f0f0f0;
+    background-color: #222222; /* Very dark gray */
 }
 
 #product {
     text-align: center;
-    border-bottom: 1px solid #cccccc;
-    background-color: #ffffff;
+    border-bottom: 1px solid #eeeeee; /* Off-white */
+    background-color: #222222; /* Very dark gray */
+    color: #dddddd; /* Light gray */
 }
 
-#product big {
-    font-size: 2em;
-}
+    #product big {
+        font-size: 2em;
+        color: #ffffff; /* White */
+    }
 
 #main {
-    background-color: #f0f0f0;
-    border-left: 2px solid #cccccc;
-    display: flex
+    background-color: #222222; /* Very dark gray */
+    border-left: 2px solid #eeeeee; /* Off-white */
+    display: flex;
+    color: #dddddd; /* Light gray */
 }
 
 #navigation {
     width: 18em;
     vertical-align: top;
-    background-color: #f0f0f0;
+    background-color: #333333; /* Dark gray */
     overflow: visible;
+    color: #dddddd; /* Light gray */
 }
 
-#navigation h2 {
-    background-color:#e7e7e7;
-    font-size:1.1em;
-    color:#000000;
-    text-align: left;
-    padding:0.2em;
-    border-top:1px solid #dddddd;
-    border-bottom:1px solid #dddddd;
-}
+    #navigation h2 {
+        background-color: #444444; /* Dark gray */
+        font-size: 1.1em;
+        color: #dddddd; /* Light gray */
+        text-align: left;
+        padding: 0.2em;
+        border-top: 1px solid #eeeeee; /* Off-white border */
+        border-bottom: 1px solid #eeeeee; /* Off-white border */
+    }
 
-#navigation ul
-{
-    font-size:1em;
-    list-style-type: none;
-    margin: 1px 1px 10px 1px;
-}
+    /* Navigation styles */
+    #navigation ul {
+        font-size: 1em;
+        list-style-type: none;
+        margin: 1px 1px 10px 1px;
+    }
 
-#navigation li {
-    text-indent: -1em;
-    display: block;
-    margin: 3px 0px 0px 22px;
-}
-
-#navigation li li a {
-    margin: 0px 3px 0px -1em;
-}
+    #navigation li {
+        text-indent: -1em;
+        display: block;
+        margin: 3px 0px 0px 22px;
+    }
 
 #content {
     padding: 2em;
     width: 900px;
-    border-left: 2px solid #cccccc;
-    border-right: 2px solid #cccccc;
-    background-color: #ffffff;
+    border-left: 2px solid #eeeeee; /* Off-white */
+    border-right: 2px solid #eeeeee; /* Off-white */
+    background-color: #222222; /* Very dark gray */
+    color: #dddddd; /* Light gray */
 }
-
-#about {
-    clear: both;
-    padding: 5px;
-    border-top: 2px solid #cccccc;
-    background-color: #ffffff;
-}
-
-@media print {
-    body {
-        font: 12pt "Times New Roman", "TimeNR", Times, serif;
-    }
-    a { font-weight: bold; color: #004080; text-decoration: underline; }
-
-    #main {
-        background-color: #ffffff;
-        border-left: 0px;
-    }
-
-    #container {
-        margin-left: 2%;
-        margin-right: 2%;
-        background-color: #ffffff;
-    }
-
-    #content {
-        padding: 1em;
-        background-color: #ffffff;
-    }
-
-    #navigation {
-        display: none;
-    }
-    pre.example {
-        font-family: "Andale Mono", monospace;
-        font-size: 10pt;
-        page-break-inside: avoid;
-    }
-}
-
-table.module_list {
-    border-width: 1px;
-    border-style: solid;
-    border-color: #cccccc;
-    border-collapse: collapse;
-}
-table.module_list td {
-    border-width: 1px;
-    padding: 3px;
-    border-style: solid;
-    border-color: #cccccc;
-}
-table.module_list td.name { background-color: #f0f0f0; min-width: 250px; }
-table.module_list td.summary { width: 100%; }
-
-
-table.function_list {
-    border-width: 1px;
-    border-style: solid;
-    border-color: #cccccc;
-    border-collapse: collapse;
-}
-table.function_list td {
-    border-width: 1px;
-    padding: 3px;
-    border-style: solid;
-    border-color: #cccccc;
-}
-table.function_list td.name { background-color: #f0f0f0; min-width: 250px; }
-table.function_list td.summary { width: 100%; }
-
-ul.nowrap {
-    white-space:nowrap;
-}
-
-dl.table dt, dl.function dt {border-top: 1px solid #ccc; padding-top: 1em;}
-dl.table dd, dl.function dd {padding-bottom: 1em; margin: 10px 0 0 20px;}
-dl.table h3, dl.function h3 {font-size: .95em;}
-
-/* stop sublists from having initial vertical space */
-ul ul { margin-top: 0px; }
-ol ul { margin-top: 0px; }
-ol ol { margin-top: 0px; }
-ul ol { margin-top: 0px; }
-
-/* make the target distinct; helps when we're navigating to a function */
-a:target + * {
-  background-color: #FF9;
-}
-
